Version 8.3
===========

New Features and Enhancements
-----------------------------
* Added CRibbonDockFrame.
   This class adds docking to a frame window which supports the Ribbon UI.
   A RibbonDockFrame sample has been added to demonstrate CRibbonDockFrame.

* Updated CString
 - CString and the text conversion classes can now be used independently of
   the rest of the framework.

* Updated CFrame
 - SetView can now be used to switch between multiple views. This also applies
   to CDocker, CDockContainer and CMDIChild.
 - Added a virtual SetupMenuIcons function. This functions adds the set of
   ToolBar images to the icons used in menus. Override this to add additional
   icons to the menus.
   
* Updated CDocker
  - SetView can now be used to switch between multiple views for CDocker and
    CDockContainer.  
  - Improved the way the active docker is determined.
  

Changes in detail
-----------------
Added CRibbonDockFrame          class
Added CDocker::OnActivate		member function
Added CDocker::OnMouseActivate	member function
Added CDocker::OnSize			member function
Added CDocker::SetActiveDocker	member function
Added CFrame::SetupMenuIcons    member function
Added RibbonDockFrame           sample application

Modified CWinThread::CreateThread	now returns thread handle.

Removed CDocker::GetDockFromPoint


Version 8.2
===========

New Features and Enhancements
----------------------------- 
* Added support for Common Dialogs
The following common dialogs have been added to the framework:
 - CColorDialog
 - CFindReplacDialog
 - CFileDialog
 - CFontDialog
 - CPrintDialog
 - CPageSetupDialog
 
The CPrintDialog and CPageSetupDialog classes share global memory for 
their hDevMode and hDevNames handles. This global memory persists after
the CPrintDialog and CPageSetupDialog objects are destructed, and is 
managed by CWinApp. There is no need for the user to manually lock,
unlock or free the hDevMode and hDevNames memory.