@@ -50,8 +50,7 @@ void CView::OnDraw(CDC& dc)
 		bool bDraw = false;  //Start with the pen up
 		for (UINT i = 0 ; i < pp.size(); ++i)
 		{
-			CPen pen(PS_SOLID, 1, pp[i].color);
-			HPEN OldPen = (HPEN)dcMem.SelectObject(pen);
+			dcMem.CreatePen(PS_SOLID, 1, pp[i].color);
 
 			if (bDraw)
 				dcMem.LineTo(pp[i].x, pp[i].y);
@@ -59,9 +58,6 @@ void CView::OnDraw(CDC& dc)
 				dcMem.MoveTo(pp[i].x, pp[i].y);
 
 			bDraw = pp[i].PenDown;
-			
-			// Ensure the CPen is selected out of dcMem before the CPen is destroyed.
-			dcMem.SelectObject(OldPen);
 		}
 	}
 
